# novelti

./: .gitignore  NoVeLTI_setup.md
lthmi_nav/: CMakeLists.txt  README.txt  package.xml  plugin_description.xml  setup.py
lthmi_nav/debug/: debug_arc.sh  debug_rosconsole.conf  gdb_bag_processor  gdb_best_pose_finder  gdb_inference_unit  gdb_map_divider  gdb_robot_model  rosconsole_conf_verb_debug.conf  rosconsole_conf_verb_info.conf  rosconsole_conf_verb_warn.conf
lthmi_nav/include/: CWave2DebuggerSDL.cpp
lthmi_nav/include/lthmi_nav/: best_pose_finder.h  best_pose_finder_cog.h  best_pose_finder_quasi_opt.h  common.cpp  cwave2.h  fast_dist.h  inference_unit.h  (+8 more)
lthmi_nav/launch/: bag_processor.launch  exp.launch  experiment.launch  expset.launch  key.launch  run.launch  rviz_autocam.launch  rviz_robot_autocam.launch  rviz_robot_autocam_w_goal.launch  rviz_static.launch  test.launch  test_arc.launch  test_emulator_keayboard_and_stoch_hmi_model.launch  test_experimentator.launch  test_space_division.launch  test_workflow.launch  with_move_base.launch
lthmi_nav/map/: ak500.map  ak500inflated.map  ak500inflated.paths  arena2.paths  maze2.map  mini.map  snake_short.map
lthmi_nav/msg/: Experiment.msg
lthmi_nav/nodes/: chatter.py  node_experimentator.py  node_human_model.py  node_keyboard_commander.py  node_lthmi_model.py  node_lthmi_nav_to_move_base.py  node_mediator.py  node_param_publisher.py
lthmi_nav/rviz/: experimentator_autocam.rviz  experimentator_static.rviz  robot.rviz  run_autocam.rviz  run_robot_autocam.rviz  run_robot_autocam_w_goal.rviz  run_static.rviz  test_experimentator.rviz  test_space_divider.rviz  test_workflow.rviz
lthmi_nav/scripts/: destination_generator.py  emulator_keyboard.py  emulator_keyboard_test.py  experimentator.py  human_model.py  inference_module.py  keyboard_commander.py  monitor.py  node_human_model.py  robot_model.py  robot_model_moving.py  stochastic_hmi_model.py  video_builder.sh
lthmi_nav/src/: best_pose_finder.cpp  best_pose_finder_cog.cpp  best_pose_finder_maxprob.cpp  best_pose_finder_node.cpp  best_pose_finder_opt.cpp  best_pose_finder_quasi_opt.cpp  cwave_cmdline.cpp  inference_unit.cpp  map.cpp  map_divider.cpp  map_divider_cwave.cpp  map_divider_equidist.cpp  map_divider_extremal.cpp  map_divider_extremal_sort.cpp  map_divider_htile.cpp  map_divider_old.cpp  map_divider_tile.cpp  map_divider_vchess.cpp  map_divider_vert_tiles.cpp  map_divider_vtile.cpp  map_publisher.cpp  msg_processor.cpp  node_bag_processor.cpp  node_best_pose_finder.cpp  node_human_model.cpp  node_inference_unit.cpp  node_map_divider.cpp  node_robot_model.cpp  opt_pose_finder.cpp  robot_model.cpp  rviz_colored_map_display.cpp  rviz_float_map_display.cpp  rviz_int_map_display.cpp  space_divider.cpp  space_divider_node.cpp  table_records.cpp
lthmi_nav/srv/: StartExperiment.srv
lthmi_nav/test/: test_rviz_intensity.py  test_rviz_regions.py
lthmi_nav/tools/: MapTools.py
novelti/: CMakeLists.txt  README.txt  novelti_doc.md  novelti_setup.sh  package.xml  plugin_description.xml  setup.py
novelti/archive/: best_pose_finder_node.cpp  chatter.cpp  destination_generator.py  experimentator_old.py  map.cpp  map_divider_equidist.cpp  map_divider_extremal.cpp  map_divider_extremal_sort.cpp  map_divider_htile.cpp  map_divider_old.cpp  map_divider_vtile.cpp  opt_pose_finder.cpp  robot_model.cpp  run_helper.sh  test_best_pose_finder.cpp  test_space_divider.cpp
novelti/debug/: .gdbinit  debug_rosconsole.conf  gdb_bag_processor  gdb_best_pose_finder  gdb_diff_drive_robot_model  gdb_inference_unit  gdb_map_divider  gdb_novelti_shared_control  gdb_robot_model  rosconsole_conf_verb_debug.conf  rosconsole_conf_verb_info.conf  rosconsole_conf_verb_warn.conf
novelti/include/: Arc.hpp  ArcVertices.hpp  ArcWalker.hpp  CWave2.h  CWave2Debugger.h  CompoundMap.h  SectorArcs.hpp  SectorWalker.hpp  VertexQ.hpp
novelti/launch/: bag_processor.launch  exp.launch  key.launch  keyboard_commander.launch  novelti.launch  run.launch  rviz_autocam.launch  rviz_orientation_control.launch  rviz_robot_autocam.launch  rviz_robot_autocam_w_goal.launch  rviz_static.launch  single_node.launch  test_orientation_control.launch  two_rviz_windows.launch
novelti/map/: ak500inflated.paths  ak500inflated_2.map  arena2.map  corr.map  maze_scale.map  maze_scale_inflated.map  maze_scale_inflated.paths  mini.paths  office2_1.map  office3.map  office4.map  pi.map  predefined_poses.yaml  snake.map
novelti/map_localization/: generate_novelti_map.sh  maze.pgm  maze.yaml  neu_tunnels_10cm.pgm  neu_tunnels_trim1.xcf  tunnel_edited.yaml
novelti/msg/: FloatMap.msg  OrientationDisplay.msg
novelti/nodes/: commander_sync_interface.py  node_emotiv_commander.py  node_experimentator.py  node_human_model.py  node_inference_unit_old.py  node_keyboard_commander.py  node_lthmi_model.py  node_lti_model.py  node_mediator.py  node_monitor.py
novelti/rviz/: experimentator_autocam.rviz  experimentator_static.rviz  orientation_view.rviz  pdf.rviz  robot.rviz  run_autocam.rviz  run_robot_autocam.rviz  run_robot_autocam_w_goal.rviz  run_static.rviz  test_experimentator.rviz
novelti/scripts/: human_model.py
novelti/src/: best_pose_finder.cpp  best_pose_finder_opt.cpp  best_pose_finder_quasi_opt.cpp  cwave_cmdline.cpp  float_map_display.cpp  inference_matrix.cpp  inference_unit.cpp  int_map_display.cpp  map_display.cpp  map_display_base.cpp  map_divider.cpp  map_divider_cwave.cpp  map_divider_tile.cpp  map_divider_vchess.cpp  map_publisher.cpp  msg_processor.cpp  node_bag_processor.cpp  node_best_pose_finder.cpp  node_diff_drive_robot_model.cpp  node_human_model.cpp  node_inference_unit.cpp  node_map_divider.cpp  node_novelti_shared_control.cpp  node_robot_model.cpp  node_robot_model_diff_drive.cpp  node_robot_model_omni_drive.cpp  novelti_shared_control.cpp  opt_orientation_selector.cpp  orientation_control.cpp  orientation_disk_divider.cpp  pdf_utils.cpp  position_control.cpp  rviz_fixed_view_controller.cpp  rviz_int_map_display.cpp  space_divider_node.cpp  table_records.cpp
novelti/srv/: StartExperiment.srv
(+241 files in other folders)
